# ruminant

./: .gitignore  .ruminant-keys.toml.example  .ruminant.toml.example  CLAUDE.md  README.md  pyproject.toml  site.html
design/: annotate.py  claude-summary-prompt.py  gh-fetch.py
ruminant/: __init__.py  __main__.py  config.py  main.py
ruminant/commands/: __init__.py  annotate.py  atom.py  bake.py  fetch_avatars.py  git.py  group.py  prompt.py  report.py  summarize.py  summarize_daily.py  summarize_week.py  summarize_week_batch.py  sync.py  website.py  website_json.py
ruminant/utils/: __init__.py  annotate.py  claude.py  dates.py  github.py  logging.py  paths.py
